# setest

framework/: CMakeLists.txt  CMakeLists.txt~  framework.kdev4  main.cpp  main.cpp~
framework/.kdev4/: framework.kdev4
framework/SednaTest/: SednaTestSet.cpp  SednaTestSet.h~  Tester.cpp~  Tester.h~
framework/Tester/: Tester.cpp  Tester.cpp~  Tester.h  Tester.h~
framework/XQTS/: XQTSCatalogParser.cpp  XQTSCatalogParser.h  XQTSConfig.cpp  XQTSConfig.cpp~  XQTSConfig.h  XQTSConfig.h~  XQTSInputs.cpp  XQTSInputs.cpp~  XQTSInputs.h~  XQTSOutputs.cpp  XQTSOutputs.cpp~  XQTSOutputs.h  XQTSOutputs.h~  XQTSTestCase.cpp  XQTSTestCase.cpp~  XQTSTestCase.h~  XQTSTestCase.h~ (Case Conflict 1)  XQTSTestSet.cpp  XQTSTestSet.cpp~  XQTSTestSet.h  xqtsabstracts.cpp~  xqtsabstracts.h~  xqtstestset.h~  xqtstestset.h~ (Case Conflict 1)
framework/diff/: xmldiff.cpp  xmldiff.cpp~  xmldiff.h
framework/environment/: environment.cpp  environment.h
framework/folders/: testcase.cpp  testcase.h  testgroup.cpp  testgroup.h
framework/import_tests/: .gitignore  import.py
framework/sedna/: ISednaTestCase.h  ISednaTestGroup.h  ISednaTestSet.h  SednaInterface.cpp  SednaInterface.cpp~  SednaInterface.h  SednaInterface.h~  isednatestset.h~  isednatestset.h~ (Case Conflict 1)
